--- a/packages/client-farcaster/package.json
+++ b/packages/client-farcaster/package.json
@@ -1,14 +1,16 @@
 {
-    "name": "@ai16z/plugin-evm",
+    "name": "@ai16z/client-farcaster",
     "version": "0.0.1",
     "main": "dist/index.js",
     "type": "module",
     "types": "dist/index.d.ts",
     "dependencies": {
         "@ai16z/eliza": "workspace:*",
-        "abitype": "^1.0.6",
-        "tsup": "^8.3.5",
-        "viem": "^2.21.45"
+        "@ai16z/plugin-node": "workspace:*",
+        "@ai16z/plugin-image-generation": "workspace:*"
+    },
+    "devDependencies": {
+        "tsup": "^8.3.5"
     },
     "scripts": {
         "build": "tsup --format esm --dts",
